--- a/reino-animal/package.json
+++ b/reino-animal/package.json
@@ -3,16 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "elliptic": "^6.5.3",
-    "http-proxy": "^1.18.1",
-    "node-forge": "^0.10.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "styled-components": "^5.2.0",
-    "websocket-extensions": "^0.1.4"
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
