--- a/reino-animal/package.json
+++ b/reino-animal/package.json
@@ -8,6 +8,7 @@
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-scroll": "^1.8.1",
     "styled-components": "^5.2.0"
   },
   "scripts": {
