--- a/reino-animal/package.json
+++ b/reino-animal/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "react": "^16.14.0",
+    "react-currency-format": "^1.0.0",
     "react-dom": "^16.14.0",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
